RESOLVED FIXED282918
Calling `WKWebView.evaluateJavaScript` in an async context crashes if nothing is returned by JS
https://bugs.webkit.org/show_bug.cgi?id=282918
Summary Calling `WKWebView.evaluateJavaScript` in an async context crashes if nothing...
Richard Robinson
Reported 2024-11-10 22:36:45 PST
Attachments
Richard Robinson
Comment 1 2024-12-05 16:54:36 PST
EWS
Comment 2 2024-12-11 11:05:24 PST
Committed 287682@main (453be7336115): <https://commits.webkit.org/287682@main> Reviewed commits have been landed. Closing PR #37519 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.