Tools/TestWebKitAPI/Tests/WebKit Swift/WKWebViewSwiftOverlayTests.swift
@@ -36,10 +36,7 @@ struct WKWebViewSwiftOverlayTests {
         #expect(response == 3)
     }
 
-    @Test(
-        .disabled("This test currently crashes due to the associated bug."),
-        .bug("https://bugs.webkit.org/show_bug.cgi?id=282918")
-    )
+    @Test(.bug("https://bugs.webkit.org/show_bug.cgi?id=282918"))
     func evaluateJavaScriptWithNilResponse() async throws {
         let webView = WKWebView()
         
